Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-13003

explorer address bar display problem

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.11
    • Shell

    Description

      explorer address bar display problem (but the address is correct)
      see screenshot.

      r74244

      may be related to CORE-10162,  see https://jira.reactos.org/secure/attachment/40210/VirtualBox_ReactOS_14_03_2017_18_55_04.png

      Attachments

        1. 045RC2-worksForMe-English.png
          045RC2-worksForMe-English.png
          145 kB
        2. addressband_cpp_fix.patch
          3 kB
        3. addressband.cpp.patch
          0.4 kB
        4. addressband.diff
          3 kB
        5. addressband.diff
          3 kB
        6. CBT.exe
          24 kB
        7. ComboTest.exe
          24 kB
        8. ReactOS_AddressBand01.png
          ReactOS_AddressBand01.png
          109 kB
        9. ROS_0.4.7rc1.png
          ROS_0.4.7rc1.png
          112 kB
        10. ROS_MyDocuments800x600.png
          ROS_MyDocuments800x600.png
          75 kB
        11. ROS_MyDocumentsLarge.png
          ROS_MyDocumentsLarge.png
          91 kB
        12. VirtualBox_ReactOS_30_03_2017_12_50_38.png
          VirtualBox_ReactOS_30_03_2017_12_50_38.png
          53 kB

        Issue Links

          Activity

            People

              reactosfanboy reactosfanboy
              Jedi-to-be Jedi-to-be
              Votes:
              2 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: