[BROWSEUI] Apply a hack to prevent truncating the address bar text. CORE-13003